🌐 Translate Conclu.tex

--- a/s7/report-en/Conclu.tex
+++ b/s7/report-en/Conclu.tex
@@ -2,22 +2,22 @@
 \chapter{Conclusion} % 1 page max
 \label{ch:Conclusion}
 
-\section{Travail réalisé}
+\section{Work completed}
 
-Le modèle qui a été développé, avec algorithme de réduction, permet de limiter autant que souhaité la taille d'un état en mémoire, au prix d'une perte de précision. Le cadre mathématique de celui-ci a été défini, et des algorithmes de réduction ont étés prouvés sur cette structure de données.
+The model that has been developed, with reduction algorithms, makes it possible to limit the size of a state in memory as much as desired, at the cost of a loss of precision. A mathematical framework has been clearly defined, and reduction algorithms have been proven on this data structure.
 
-L'implémentation, n'a pas encore fourni de résultats expérimentaux significatifs, mais permet déjà de simuler des diagrammes de décision quantiques de manière performante. Sa robustesse est assurée par des tests unitaires.
+The implementation has not yet produced any significant experimental results as thorough benchmarks have not been run yet, but it is already capable of simulating and reducing quantum decision diagrams. Its robustness is ensured by unit tests.
 
-Au cours de ce semestre, des efforts sur l'implémentation ont été réalisés, entre autres afin de rendre interchangables les intervalles complexes cartésiens et polaires mais aussi plus généralement pour améliorer la qualité et réusabilité du code. La documentation du code a été améliorée, et le document principal détaillant les aspects théoriques du projet a été complété.
+During this semester, efforts were made on the implementation, among other things to make Cartesian and polar complex intervals interchangable, but also more generally to improve code quality and reusability. Code documentation has been improved, and the main document detailing the theoretical aspects of the project has been completed.
 
-Un interpréteur QASM a été réalisé au cours de ce semestre, se reposant sur des travaux théoriques ayant permis une implémentation de l'application de portes à des diagrammes.
+A QASM interpreter was produced during this semester, based on theoretical work which enabled the implementation of the application of gates to diagrams.
 
-Le travail réalisé sur cette période est donc prometteur, et s'incrit dans la continuité du travail réalisé au semestre dernier : malgré des difficultés rencontrées, tant d'un point de vue technique en programmation que dans la définition du modèle, ayant parfois amené à revenir en arrière avant de trouver une bonne définition de l'erreur par exemple, les résultats théoriques obtenus sont prometteurs.
+The work carried out over this period is therefore promising, and follows on from the work carried out last semester: despite the difficulties encountered, both from a technical point of view in programming and in defining the model, which sometimes led us to go backwards before finding a good definition of the error or a convincing way to apply quantum gates, for example, the theoretical results obtained are promising.
 
 \section{Perspectives}
 
-Plusieurs perspectives peuvent être envisagées pour prolonger les travaux réalisés. D'une part, puisque plusieurs choix dans la définition du modèle ont étés faits de manière arbitraire parmi plusieurs options possibles, il est pertinent de réaliser de nombreuses simulations dans des configurations différentes afin de déterminer les choix les plus pertinents.
+Several perspectives can be envisaged to extend the work carried out. On the one hand, since several choices in the definition of the model have been made arbitrarily among several possible options, it is relevant to carry out numerous simulations in different configurations in order to determine the most pertinent choices.
 
-On pourra notamment réaliser des tests de performance sur plusieurs fonctions d'erreur, ou observer l'effet d'échanges de qubits sur les performances en termes de manque de précision. De manière générale, il manque des \textbf{résultats expérimentaux} et en particulier des comparaisons à d'autres implémentations de la littérature sur des exemples usuels.
+In particular, we can carry out performance tests on several error functions, or observe the effect of qubit exchanges on performance in terms of lack of precision. Generally speaking, we lack \textbf{experimental results} and in particular comparisons with other implementations in the literature on usual examples.
 
-Nous pourrons aussi étendre le modèle avec d'autres concepts, comme les automates d'arbres pour la \textbf{vérification} ou les diagrammes de décisions et applications localement inversibles. \cite{Chen_2023} \cite{Vinkhuijzen_2023} Enfin, l'implémentation aurait à gagner d'être plus facile d'utilisation, par exemple avec une \textbf{interface graphique} pouvant agrémenter l'interpréteur QASM. Ces axes de travail pourront être explorés au cours de la suite du projet s'il est prolongé.
+We could also extend the model with other concepts, such as tree automata for \textbf{verification} or locally invertible decision diagrams and applications. \cite{Chen_2023} \cite{Vinkhuijzen_2023} Finally, the implementation would benefit from being more user-friendly, for example with a \textbf{graphical user interface} that could enhance the QASM interpreter. If the project is extended, these focus areas can be explored in the future.
