--- a/s7/report-fr/Conclusion.tex
+++ b/s7/report-fr/Conclusion.tex
@@ -6,13 +6,13 @@
 
 Le modèle qui a été développé, avec algorithme de réduction, permet de limiter autant que souhaité la taille d'un état en mémoire, au prix d'une perte de précision. Le cadre mathématique de celui-ci a été défini, et des algorithmes de réduction ont étés prouvés sur cette structure de données.
 
-L'implémentation, n'a pas encore fourni de résultats expérimentaux significatifs, mais permet déjà de simuler des diagrammes de décision quantiques de manière performante. Sa robustesse est assurée par des tests unitaires.
+L'implémentation n'a pas encore fourni de résultats expérimentaux significatifs étant donné qu'ils n'ont pas encore fait l'objet d'un benchmark rigoureux, mais elle permet déjà de simuler des diagrammes de décision quantiques de manière performante. Sa robustesse est assurée par des tests unitaires.
 
 Au cours de ce semestre, des efforts sur l'implémentation ont été réalisés, entre autres afin de rendre interchangables les intervalles complexes cartésiens et polaires mais aussi plus généralement pour améliorer la qualité et réusabilité du code. La documentation du code a été améliorée, et le document principal détaillant les aspects théoriques du projet a été complété.
 
 Un interpréteur QASM a été réalisé au cours de ce semestre, se reposant sur des travaux théoriques ayant permis une implémentation de l'application de portes à des diagrammes.
 
-Le travail réalisé sur cette période est donc prometteur, et s'incrit dans la continuité du travail réalisé au semestre dernier : malgré des difficultés rencontrées, tant d'un point de vue technique en programmation que dans la définition du modèle, ayant parfois amené à revenir en arrière avant de trouver une bonne définition de l'erreur par exemple, les résultats théoriques obtenus sont prometteurs.
+Le travail réalisé sur cette période est donc prometteur, et s'incrit dans la continuité du travail réalisé au semestre dernier : malgré des difficultés rencontrées, tant d'un point de vue technique en programmation que dans la définition du modèle, ayant parfois amené à revenir en arrière avant de trouver une bonne définition de l'erreur ou une manière convainquante d'appliquer les portes quantiques par exemple, les résultats théoriques obtenus sont prometteurs.
 
 \section{Perspectives}
 
