--- a/s7/presentation-fr/cadre-formation.tex
+++ b/s7/presentation-fr/cadre-formation.tex
@@ -23,35 +23,33 @@
 \end{frame}
 
 % 8. Résumez vos choix pour la suite en termes de S8, électifs, international, éventuellement césure
-\begin{frame}{Année prochaine}
-  \begin{center}
-    Continuer la formation en \textbf{informatique théorique}...
-  \end{center}
-  \small{Électifs} % envisagés, choix possibles
-  \footnotesize{
-  \begin{itemize}
-    \item Génie logiciel orienté objet
-    \item Informatique théorique
-    \item Calcul haute performance
-    \item Modèles et sys. pour la gestion de données
-  \end{itemize}}
-  \vspace{1em}
-  \small{Complément scientifique : métaheuristiques}
-\end{frame}
-
-\begin{frame}{Année prochaine}
-  \begin{center}
-    ... et progresser en \textbf{programmation}
-  \end{center}
-  \small{Année de césure \textit{Digital Tech Year}}
-  \footnotesize{
+\begin{frame}{Année de césure}
+  \textbf{Année de césure} \textit{Digital Tech Year}
   \begin{itemize}
     \item Semestre au Paris Digital Lab
-    \item Semestre en entreprise à l'international
-    \item Projets variés en équipe
+    \item Projets tech variés en équipe
+    \item Stage de 6 mois en entreprise ou laboratoire, en France ou à l'international
   \end{itemize}
-  }
+
+  \pause
+
+  \vspace{1em}
+  \includesvg[width=.25\textwidth]{./images/ab-logo.svg}
+  \hfill{}
+  \includesvg[width=.25\textwidth]{./images/pasqal-logo.svg}
+  \hfill{}
+  \includegraphics[width=.25\textwidth]{./images/quandela-logo.png}
 \end{frame}
+
+\begin{frame}{Après la césure}
+  \textbf{Après la césure}
+  \begin{itemize}
+    \item S8 à CentraleSupélec
+    \item S8 Pro (stage)
+    \item S8 académique international
+  \end{itemize}
+\end{frame}
+
 
 % voire souhaits pour la 3e année
 \begin{frame}{Perspectives pour la 3\textsuperscript{e} année}
@@ -68,4 +66,12 @@ Dominantes / mentions
       \item Quantum engineering
   \end{itemize}
 \end{itemize}
+\end{frame}
+
+\begin{frame}{Autres formations}
+  \textbf{Autres formations}
+  \begin{itemize}
+    \item ARTeQ (ENS Paris-Saclay)
+    \item QMI M2 (Télécom Paris, entre autres)
+  \end{itemize}
 \end{frame}
