--- a/s7/presentation-fr/travail-resultats.tex
+++ b/s7/presentation-fr/travail-resultats.tex
@@ -2,13 +2,13 @@
 \begin{frame}{Travail réalisé}
   \textbf{Modèle}
   \begin{itemize}
-      \item[\checkmark] Intervalles de $\mathbb C$ cartésiens \& polaires
-      \item[\checkmark] Diagrammes
-      \item[\checkmark] Approximation locale, globale
-      \item[\checkmark] Erreur
-      \item[\checkmark] Fusion forcée
-      \item[\checkmark] Algorithmes de réduction
-      \item[\checkmark] Application de portes
+      \item[S6] Intervalles de $\mathbb C$ cartésiens \& polaires
+      \item[S6] Diagrammes
+      \item[S6] Approximation locale, globale
+      \item[S6] Fusion forcée
+      \item[S6] Algorithmes de réduction
+      \item[S7] Erreur
+      \item[S7] Application de portes
   \end{itemize}
 \end{frame}
 
@@ -113,16 +113,145 @@
 \end{frame}
 
 \begin{frame}{Erreur}
-  
+  Comment choisir quels diagrammes réduire ?
+  $$\Downarrow$$
+  \textbf{Erreur} : on peut mesurer l'erreur d'un diagramme réduit par rapport àcelle de l'original
+\end{frame}
+
+\begin{frame}[noframenumbering]{Portes-bases}
+  Les circuits quantiques sont basés sur des \textbf{portes}
+
+  \vspace{1em}
+  On les modélise par des \textbf{matrices}
+
+  \pause
+
+  \vspace{1em}
+  Exemple : Hadamard
+  $$H = \frac{1}{\sqrt{2}}\begin{pmatrix}
+    1 & 1 \\
+    1 & -1
+  \end{pmatrix}$$
+
+  $$H \begin{pmatrix}
+    1 \\ 0
+  \end{pmatrix} = \frac{1}{\sqrt{2}} \begin{pmatrix}
+     1 \\ 1
+  \end{pmatrix}$$
+\end{frame}
+
+\begin{frame}{Portes-évaluation}
+  On veut appliquer une porte $M$ à un diagramme $D$
+
+  \pause
+
+  \vspace{1em}
+  Si $\mathcal E(D) = \text{évaluation du diagramme}$
+
+  \vspace{1em}
+  On \textit{veut}
+  $\mathcal E(M(D)) = M~\mathcal E(D)$
+
+  \pause
+
+  $$D = (\{(l_1, L_1), ..., (l_p, L_p)\}, \{(r_1,R_1), ..., (r_m, R_m)\})$$
+\end{frame}
+
+\begin{frame}{Avant Porte}
+  \begin{figure}[ht]
+    \centering
+  % https://tikzcd.yichuanshen.de/#N4Igdg9gJgpgziAXAbVABwnAlgFyxMJZAJgBoAGAXVJADcBDAGwFcYkQAREAX1PU1z5CKcqQCM1Ok1bsAMgH0xPPiAzY8BImPGSGLNohAK0y-uqFEAzDpp6ZhgEqLTqgRuHIALDan72TgFseSRgoAHN4IlAAMwAnCCDEURAcCCRtX3sQRmcaRnoAIxhGAAU3C0NYrDCACxwQPKwwAxAoejga0Jc4hKRk1KQyTJackzzC4rLzTUNGGGj6xub2No6u3hj4xP60xGth9ljc7InS8pmQKtr6jZAe7ZoBxG8Dyvkg8aKz6eFs+ZuVPd0o9dkM7AYwMxGIxPpNzr85gsGiBOvQoOxIMsli0oBAcDh1oCtkh9k8XuCkJDobDvoILojFiiYGiMQQ2NiVniCejuJRuEA
+  \begin{tikzcd}[column sep=0.4cm, row sep=2.5cm, ampersand replacement=\&]
+    \&     \& D \arrow[lld, "l_1"', dashed] \arrow[ld, "l_p", dashed] \arrow[rd, "r_1"'] \arrow[rrd, "r_m"] \&                                \&     \\
+  L_1 \arrow[r, no head, dotted] \& L_p \&                                                                                               \& R_1 \arrow[r, no head, dotted] \& R_m
+  \end{tikzcd}
+  \end{figure}
+  \begin{center}
+    {Avant application de la porte}
+  \end{center}
+\end{frame}
+
+\begin{frame}[noframenumbering]{Pendant portes 1}
+  \Huge \color{cs}1.\color{black}
+
+  \begin{figure}[H]
+    \tikzcdset{every label/.append style = {font = \large}}
+    \centering
+    \resizebox{1\textwidth}{!}{
+% https://tikzcd.yichuanshen.de/#N4Igdg9gJgpgziAXAbVABwnAlgFyxMJZAFgBoAGAXVJADcBDAGwFcYkQBZACgBEBKEAF9S6TLnyEU5UgEZqdJq3YAZAPoyhIkBmx4CRGbPkMWbRCDVpNo3RKIAmIzRNLzAJXXXtYvZOQBmJwVTdg8AWy8dcX0UAFYglzMQDw1hG2i-ADYExSTwyJ87FAAOHJDzIXkYKABzeCJQADMAJwgIxGkQHAgkQODXMGZGRhpGegAjGEYABUKYkEYYRpwQUawwJKh6OAALaq8WtqRO7qQyfrNB4dGJqdnbecXl1YX1ze29qAPW9pOexGyFyQVxGC1uMzmkgWSxWaRAh1+NFOiEcQMQIJukwhDyhTxWaw27C2u32cIRxyR-0MaIxYKx9wy7DxL0YbyJH1JWnJHUpSHiNKGoLG9MhTJh3yOiGpyNRiWBgsxd1F5mZND29C+5kghIJmwgOBwnKaP16vMQ5zl6IVdKVOLFzzVMA17G1bF1RP1hq+ZJNiH5yMBltpwttjJV4sdzq1BDdr0J5igntJlEEQA
+\begin{tikzcd}[column sep=0.4cm, row sep=3cm, ampersand replacement=\&]
+  \&     \&                                \&     \& M(D) \arrow[lld, dashed] \arrow[ld, dashed] \arrow[rrd] \arrow[llld, dashed] \arrow[lllld, dashed] \arrow[rd] \&                                \&     \&  \&    \\
+L_1 \arrow[r, no head, dotted] \& L_p \& R_1 \arrow[r, no head, dotted] \& R_m \&                                                                                                               \& R_1 \arrow[r, no head, dotted] \& R_m \&  \& {}
+\end{tikzcd}
+    }
+  \end{figure}
+\end{frame}
+
+\begin{frame}{Pendant Portes 2}
+  \Huge \color{cs}2.\color{black}
+  \begin{figure}[H]
+    \centering
+    \resizebox{1\textwidth}{!}{
+      % https://tikzcd.yichuanshen.de/#N4Igdg9gJgpgziAXAbVABwnAlgFyxMJZAFgBoAGAXVJADcBDAGwFcYkQBZACgBEBKEAF9S6TLnyEU5UgEZqdJq3YcA+sHLlBXADIqZA4aOx4CRGbPkMWbRJzUatutAZEgMxiUQBMFmlaW2quoyWgBKei5G4qYoAMy+CtbK9iFc4QC2kW5iJpLIAKwJ-jZ2wDKaOhFCru7ReQBsRYolQeWOKs7VUblEAOxNSYFqMqnh+l3ZHjHIABwDAaUjYSqZQvIwUADm8ESgAGYAThDpSNIgOBBI8YkBYMyMjDSM9ABGMIwACjmetowwezgQE8sGASlB6HAABYbCaHY6nGgXJBkG42O4PJ6vd5fKaSEB-AFA-EgsEQ6FQWFHE6IM5IxCFVFIdGPfFYz7fGL4-6AwwgOHU2mXRCNRmIZmYt7s3HsAk81z8hHnIU+UXi1mSnF1GXcomMEnscFQmG8hU0xFC8yq+4s54ajl42W6-W2Q3kynws1KpD9K0Y9XY+3awkmqmKulzX02tmanq-HUhj2Wukq4pM60SgPSuOEmjQ+gU2yQUFO4suiA4HDG+WhxDXOko1Ni9P+qVa7OA3MwfPsItsYGlkBQcuVikJ6kMukixtq22ZttcnMgPMF8AEPvEgdDitV-Y1n3hvzNNN+2et2MLjtLrsr3slsHD42UQRAA
+  \begin{tikzcd}[column sep=0.4cm, row sep=3cm, ampersand replacement=\&]
+    \&             \&                                        \&             \& D \arrow[lld, dashed] \arrow[ld, dashed] \arrow[rd] \arrow[rrd] \arrow[llld, dashed] \arrow[lllld, dashed] \arrow[rrrd] \arrow[rrrrd] \&                                        \&             \&                                        \&             \\
+  L_1 \arrow[r, no head, dotted] \& L_p \& R_1 \arrow[r, no head, dotted] \& R_m \&                                                                                                                                          \& L_1 \arrow[r, no head, dotted] \& L_p \& R_1 \arrow[r, no head, dotted] \& R_m
+  \end{tikzcd}
+    }
+  \end{figure}
+\end{frame}
+
+\begin{frame}[noframenumbering]{Après Portes}
+  \Huge \color{cs}3.\color{black}\normalsize
+  \begin{figure}[H]
+    \centering
+    \resizebox{1\textwidth}{!}{
+      % https://tikzcd.yichuanshen.de/#N4Igdg9gJgpgziAXAbVABwnAlgFyxMJZAFgBoAGAXVJADcBDAGwFcYkQBZACgBEBKEAF9S6TLnyEU5UgEZqdJq3YcA+sHLlBXADIqZA4aOx4CRGbPkMWbRJzUatutAZEgMxiUQBMFmlaW2quoyWgBKei5G4qYoAMy+CtbK9iFc4QC2kW5iJpLIAKwJ-jZ2wDKaOhFCru7ReQBsRYolQeWOKs7VUblEAOxNSYFqMqnh+l3ZHjHIABwDAaUjYSqZQvIwUADm8ESgAGYAThDpSNIgOBBI8YkBYMyMjDSM9ABGMIwACjmetowwezgQE8sGASlB6HAABYbCaHY6nGgXJBkG42O4PJ6vd5fKaSEB-AFA-EgsEQ6FQWFHE6IM5IxCFVFIdGPfFYz7fGL4-6AwwgOHU2mXRCNRmIZmYt7s3HsAk81z8hHnIU+UXi1mSnF1GXcomMEnscFQmG8hU0xFC8yq+4s54ajl42W6-W2Q3kynws1KpD9K0Y9XY+3awkmqmKulzX02tmanq-HUhj2Wukq4pM60SgPSuOEmjQ+gU2yQUFO4suiA4HDG+WhxDXOko1Ni9P+qVa7OA3MwfPsItsYGlkBQcuVikJ6kMukixtq22ZttcnMgPMF8AEPvEgdDitV-Y1n3hvzNNN+2et2MLjtLrsr3slsHD42UQRAA
+  \begin{tikzcd}[column sep=0.4cm, row sep=3cm, ampersand replacement=\&]
+    \&             \&                                        \&             \& M(D) \arrow[lld, dashed] \arrow[ld, dashed] \arrow[rd] \arrow[rrd] \arrow[llld, dashed] \arrow[lllld, dashed] \arrow[rrrd] \arrow[rrrrd] \&                                        \&             \&                                        \&             \\
+  M_{00}(L_1) \arrow[r, no head, dotted] \& M_{00}(L_p) \& M_{01}(R_1) \arrow[r, no head, dotted] \& M_{01}(R_m) \&                                                                                                                                          \& M_{10}(L_1) \arrow[r, no head, dotted] \& M_{10}(L_p) \& M_{11}(R_1) \arrow[r, no head, dotted] \& M_{11}(R_m)
+  \end{tikzcd}
+    }
+    $$M = \begin{pmatrix}
+      M_{00} & M_{01} \\
+      M_{10} & M_{11}
+    \end{pmatrix}$$
+    \end{figure}
+\end{frame}
+
+\begin{frame}{Après après Portes}
+  \Huge \color{cs}3.\color{black}\normalsize
+  \begin{figure}[H]
+    \centering
+    \resizebox{1\textwidth}{!}{
+      % https://tikzcd.yichuanshen.de/#N4Igdg9gJgpgziAXAbVABwnAlgFyxMJZAFgBoAGAXVJADcBDAGwFcYkQBZACgBEBKEAF9S6TLnyEU5UgEZqdJq3YcA+sHLlBXADIqZA4aOx4CRGbPkMWbRJzUatutAZEgMxiUQBMFmlaW2quoyWgBKei5G4qYoAMy+CtbK9iFc4QC2kW5iJpLIAKwJ-jZ2wDKaOhFCru7ReQBsRYolQeWOKs7VUblEAOxNSYFqMqnh+l3ZHjHIABwDAaUjYSqZQvIwUADm8ESgAGYAThDpSNIgOBBI8YkBYMyMjDSM9ABGMIwACjmetowwezgQE8sGASlB6HAABYbCaHY6nGgXJBkG42O4PJ6vd5fKaSEB-AFA-EgsEQ6FQWFHE6IM5IxCFVFIdGPfFYz7fGL4-6AwwgOHU2mXRCNRmIZmYt7s3HsAk81z8hHnIU+UXi1mSnF1GXcomMEnscFQmG8hU0xFC8yq+4s54ajl42W6-W2Q3kynws1KpD9K0Y9XY+3awkmqmKulzX02tmanq-HUhj2Wukq4pM60SgPSuOEmjQ+gU2yQUFO4suiA4HDG+WhxDXOko1Ni9P+qVa7OA3MwfPsItsYGlkBQcuVikJ6kMukixtq22ZttcnMgPMF8AEPvEgdDitV-Y1n3hvzNNN+2et2MLjtLrsr3slsHD42UQRAA
+  \begin{tikzcd}[column sep=0.4cm, row sep=3cm, ampersand replacement=\&]
+    \&             \&                                        \&             \& M(D) \arrow[lld, dashed] \arrow[ld, dashed] \arrow[rd] \arrow[rrd] \arrow[llld, dashed] \arrow[lllld, dashed] \arrow[rrrd] \arrow[rrrrd] \&                                        \&             \&                                        \&             \\
+  M_{00}(L_1) \arrow[r, no head, dotted] \& M_{00}(L_p) \& M_{01}(R_1) \arrow[r, no head, dotted] \& M_{01}(R_m) \&                                                                                                                                          \& M_{10}(L_1) \arrow[r, no head, dotted] \& M_{10}(L_p) \& M_{11}(R_1) \arrow[r, no head, dotted] \& M_{11}(R_m)
+  \end{tikzcd}
+    }
+
+    \begingroup
+    \renewcommand*{\arraystretch}{1.5}
+    % your pmatrix expression
+        $$\mathcal E(M(D)) = \begin{pmatrix}
+  \sum l_i M_{00} \mathcal E (L_i) + \sum r_j M_{01} \mathcal E (R_j) \\
+  \sum l_i M_{10} \mathcal E (L_i) + \sum r_j M_{11} \mathcal E (R_j)
+\end{pmatrix} = M ~ \mathcal E (D)$$
+\endgroup
+    \end{figure}
 \end{frame}
 
 \begin{frame}{Travail réalisé}
   \textbf{Implémentation}
   \begin{itemize}
-      \item[\checkmark] Intervalles de $\mathbb C$ cartésiens \& polaires
-      \item[\checkmark] Diagrammes : construction, évaluation
-      \item[\checkmark] Diagrammes aléatoires
-      \item[\checkmark] Fusion forcée
-      \item[$\sim$] Algorithmes de réduction
+      \item[S6] Intervalles de $\mathbb C$ cartésiens \& polaires
+      \item[S6] Diagrammes : construction, évaluation
+      \item[S6] Fusion forcée
+      \item[S6] Algorithmes de réduction
+      \item[S7] Diagrammes aléatoires
+      \item[S7] Erreur
+      \item[S7] Application de portes
+      \item[S7] QASM
   \end{itemize}
 \end{frame}
