🌐 Final(?) version of the English presentation

--- a/s7/presentation-en/annexes.tex
+++ b/s7/presentation-en/annexes.tex
@@ -1,10 +1,10 @@
 % Annexes à la présentation
-\begin{frame}{Pile technique}
+\begin{frame}{Technical stack}
 \begin{columns}
     \begin{column}{0.5\textwidth}
-        Implémentation
+        Implementation
         \begin{itemize}
-            \item \textbf{Code} (4,9k lignes)
+            \item \textbf{Code} (4.9k lines)
             \begin{itemize}
                 \item Langage C++
                 \item LLVM / Clang
@@ -30,12 +30,12 @@
 \end{columns}
 \end{frame}
 
-\begin{frame}{Pile technique secondaire}
+\begin{frame}{Secondary tools}
     \begin{columns}
         \begin{column}{0.5\textwidth}
-            Mise en forme
+            Tools
             \begin{itemize}
-                \item \textbf{Versionnage}
+                \item \textbf{Version control}
                 \begin{itemize}
                     \item Git
                     \item GitHub
