--- a/s7/presentation-en/cadre-formation.tex
+++ b/s7/presentation-en/cadre-formation.tex
@@ -1,15 +1,15 @@
-\begin{frame}{Cadre du projet Développements futurs}
-  \huge{Cadre du projet \\ Formation future}
+\begin{frame}{Project framework\ Future training}
+  \huge{Project framework \\ Future training}
 \end{frame}
 
 % 3. Présentez le contexte dans lequel vous l'effectuez : éventuellement l'équipe, le laboratoire, les partenaires hors CentraleSupélec, les fonctions des professionnels qui vous entourent.
-\begin{frame}{Environnement du projet}
+\begin{frame}{Work environnement}
   \begin{columns}
       \begin{column}{0.6\textwidth}
           \begin{itemize}
-              \item \textbf{Encadrant} : Renaud Vilmart
-              \item \textbf{Équipe} : QuaCS
-              \item \textbf{Laboratoire} : Laboratoire Méthodes Formelles
+              \item \textbf{Supervisor} : Renaud Vilmart
+              \item \textbf{Team} : QuaCS
+              \item \textbf{Laboratory} : Laboratoire Méthodes Formelles
           \end{itemize}
       \end{column}
       \begin{column}{0.4\textwidth}
@@ -23,12 +23,12 @@
 \end{frame}
 
 % 8. Résumez vos choix pour la suite en termes de S8, électifs, international, éventuellement césure
-\begin{frame}{Année de césure}
-  \textbf{Année de césure} \textit{Digital Tech Year}
+\begin{frame}{Gap year}
+  \textbf{Gap year} \textit{Digital Tech Year}
   \begin{itemize}
-    \item Semestre au Paris Digital Lab
-    \item Projets tech variés en équipe
-    \item Stage de 6 mois en entreprise ou laboratoire, en France ou à l'international
+    \item Semester at Paris Digital Lab
+    \item Various tech projects in teams
+    \item 6-month internship in a company or lab, in France or abroad
   \end{itemize}
 
   \pause
@@ -41,37 +41,37 @@
   \includegraphics[width=.25\textwidth]{./images/quandela-logo.png}
 \end{frame}
 
-\begin{frame}{Après la césure}
-  \textbf{Après la césure}
+\begin{frame}{After the gap yar}
+  \textbf{After the gap year}
   \begin{itemize}
-    \item S8 à CentraleSupélec
-    \item S8 Pro (stage)
-    \item S8 académique international
+    \item S8 at CentraleSupélec
+    \item S8 Pro (internship)
+    \item Academic S8 abroad
   \end{itemize}
 \end{frame}
 
 
 % voire souhaits pour la 3e année
 \begin{frame}{Perspectives pour la 3\textsuperscript{e} année}
-Dominantes / mentions
+Majors / mentions
 \vspace{.5em}
 \begin{itemize}
-  \item \textbf{Informatique et numérique}
+  \item \textbf{Computer science and digital technology}
   \begin{itemize}
-      \item Sciences du logiciel
-      \item Architecture des systèmes informatiques
+      \item Software engineering
+      \item Computer systems architecture
   \end{itemize}
-  \item \textbf{Physique et nanotechnologies}
+  \item \textbf{Physics and nanotechnologies}
   \begin{itemize}
       \item Quantum engineering
   \end{itemize}
 \end{itemize}
 \end{frame}
 
-\begin{frame}{Autres formations}
-  \textbf{Autres formations}
+\begin{frame}{Other training programs}
+  \textbf{Other training programs}
   \begin{itemize}
     \item ARTeQ (ENS Paris-Saclay)
-    \item QMI M2 (Télécom Paris, entre autres)
+    \item QMI M2 (Télécom Paris, among others)
   \end{itemize}
 \end{frame}
