--- a/s7/presentation-fr/main.tex
+++ b/s7/presentation-fr/main.tex
@@ -84,6 +84,15 @@
 }
 \end{frame}
 
+\begin{frame}{Méthodologie (GitHub)}
+    GitHub pour la gestion de projet
+    \begin{itemize}
+        \item \textbf{Issues} pour les tâches et le bugs
+        \item Priorités, tailles, et deadlines
+        \item Branches et \textbf{merge requests}
+    \end{itemize}
+\end{frame}
+
 \input{travail-resultats.tex}
 
 % 7. Exposez la suite prévue du projet, en particulier en 2e année.
