--- a/s7/presentation-fr/travail-resultats.tex
+++ b/s7/presentation-fr/travail-resultats.tex
@@ -113,9 +113,9 @@
 \end{frame}
 
 \begin{frame}{Erreur}
-  Comment choisir quels diagrammes réduire ?
+  Comment choisir quels diagrammes fusionner ?
   $$\Downarrow$$
-  \textbf{Erreur} : on peut mesurer l'erreur d'un diagramme réduit par rapport àcelle de l'original
+  \textbf{Erreur} : on peut calculer l'erreur induite par un diagramme
 \end{frame}
 
 \begin{frame}[noframenumbering]{Portes-bases}
