--- a/s7/presentation-en/main.tex
+++ b/s7/presentation-en/main.tex
@@ -1,7 +1,7 @@
 \documentclass[french, 12pt]{beamer}
 
 \usepackage[T1]{fontenc}
-\usepackage[french]{babel}
+\usepackage[english]{babel}
 \usepackage{url}
 
 \DecimalMathComma
@@ -38,9 +38,9 @@
 \setbeamertemplate{frametitle}{}
 \useoutertheme{split}
 
-\title{Autour des diagrammes de décision quantiques}
+\title{Around Quantum Decision Diagrams}
 \author{Malo Leroy}
-\institute{Parcours recherche -- CentraleSupélec}
+\institute{Research Track -- CentraleSupélec}
 
 % Figures and diagrams
 \usepackage{tikz}
@@ -61,49 +61,58 @@
 \input{etat-de-l-art.tex}
 
 % 2. Présentez les objectifs de votre projet.
-\begin{frame}{Objectifs}
-    Objectifs
+\begin{frame}{Objectives}
+    Objectives
     \begin{itemize}
-        \item \textbf{Modèle formel} de diagrammes de décision additifs abstraits
-        \item \textbf{Implémentation} du modèle
+        \item \textbf{Formal model} for abstract additive quantum decision diagrams
+        \item \textbf{Implementation} of the model
     \end{itemize}
 \end{frame}
 
 % 4. Développez la méthodologie que vous avez mise en œuvre durant ces premiers mois, en la justifiant.
-\begin{frame}{Méthodologie de travail}
-\underline{\textbf{Méthodologie}}
+\begin{frame}{Work methodology}
+\underline{\textbf{Methodology}}
 \small{
 \begin{center}
 % https://tikzcd.yichuanshen.de/#N4Igdg9gJgpgziAXAbVABwnAlgFyxMJZABgBpiBdUkANwEMAbAVxiRBAF9T1Nd9CUARnJVajFmwA6knDAAeOYABEIAYyYBbGGBx08BDp24gM2fQOQBmEdXrNWiENNkLgAUTkwNaBvENceM34iACZSENE7CUdneUUAFQALAEuIACcsGH9jUz4CIgAWcMjxBycZOOAASW8GZK0dPX5-URgoAHN4IlAAMzSIDSQyEBwIJGExeyQwJgYGagY6ACMYBgAFXnM2Xx6cI17+wcQJ0aQwyejyl0VVOjgAAiY4FgY4QwXl1Y2g-McdvYCID6A3G1FOiGsFzKsVcyV0OHusHuDAA5HQ0jh3iBFit1ptgo4Mu1EgDjMCjudwZCotCKq4NNAABe+LE4r7434gIkkkDUFZgKBISzEQHkoVgsaIIpQqR0m7QLK87GfPE-ATYmC7fZAw7ikaS8406azebK3HfPLq-5K-mCiEism6xCUyXSo0xOXAWRwHBvJVs1WW7aagEUDhAA
 \begin{tikzcd}[ampersand replacement=\&, column sep=small]
-    {} \arrow[r] \& \text{Documentation} \arrow[rr, "\text{cas usuels}"] \arrow[rdd, "\text{état de l'art}"'] \&                                                                 \& \text{Exemples} \arrow[ldd, "\text{modèle}"', bend left] \arrow[rdd, "\text{tests}"] \&                       \\
+    {} \arrow[r] \& \text{Documentation} \arrow[rr, "\text{usual cases}"] \arrow[rdd, "\text{state of the art}"'] \&                                                                 \& \text{Examples} \arrow[ldd, "\text{model}"', bend left] \arrow[rdd, "\text{tests}"] \&                       \\
                  \&                                                                                           \&                                                                 \&                                                                                      \&                       \\
-                 \&                                                                                           \& \text{Théorie} \arrow[rr, "\text{code}"] \arrow[ruu, bend left] \&                                                                                      \& \text{Code}
+                 \&                                                                                           \& \text{Theory} \arrow[rr, "\text{code}"] \arrow[ruu, bend left] \&                                                                                      \& \text{Code}
     \end{tikzcd}
 \end{center}
 }
 \end{frame}
 
+\begin{frame}{Methodology (GitHub)}
+    GitHub for project management
+    \begin{itemize}
+        \item \textbf{Issues} for tasks and bugs
+        \item Priorities, sizes, and deadlines
+        \item Branches and \textbf{merge requests}
+    \end{itemize}
+\end{frame}
+
 \input{travail-resultats.tex}
 
 % 7. Exposez la suite prévue du projet, en particulier en 2e année.
-\begin{frame}{Suite du projet}
-Suite du projet
+\begin{frame}{Future developments}
+Future developments
 \begin{itemize}
-    \item \textbf{Implémentation}
+    \item \textbf{Implementation}
     \begin{itemize}
-        \item Interface graphique
+        \item Graphical interface
         \item Benchmarks
     \end{itemize}
-    \item \textbf{Ajustements}
+    \item \textbf{Tweaks}
     \begin{itemize}
-        \item Fonctions d'erreur
-        \item Algorithmes de réduction
+        \item Error function
+        \item Reduction algorithms
     \end{itemize}
-    \item Nouveaux concepts
+    \item New concepts
     \begin{itemize}
-        \item Automates d'arbres
-        \item Diagrammes de décisions et applications localement inversibles (LIMDD)
+        \item Tree automata
+        \item Local Invertible Map Decision Diagrams (LIMDD)
     \end{itemize}
 \end{itemize}
 \end{frame}
