--- a/s7/presentation-fr/main.tex
+++ b/s7/presentation-fr/main.tex
@@ -12,8 +12,10 @@
 
 \usepackage{amsmath}
 \usepackage{pgfplots}
+
 \pgfplotsset{compat=1.18}
 \usepackage{amsfonts}
+\usepackage{mathrsfs}
 
 \usepackage{xcolor}
 \definecolor{ups}{RGB}{86,08,59}
