--- a/s7/report-en/Implem.tex
+++ b/s7/report-en/Implem.tex
@@ -3,7 +3,7 @@
 
 The implementation was written in \textbf{C++}. This choice was motivated by several factors: performance, the maturity of the language and its use in several historical projects in the field \cite{Bichsel_2023} \cite{QTranslator}, and its proximity to the well-known C language.
 
-\section{Structure du code}
+\section{Structure of the code}
 
 The code is the subject of extensive documentation, available online. \cite{Leroy_doc}
 The implementation makes extensive use of \textbf{object-oriented programming}, defining classes for the objects handled.
