--- a/s7/presentation-en/main.tex
+++ b/s7/presentation-en/main.tex
@@ -14,6 +14,7 @@
 \usepackage{pgfplots}
 \pgfplotsset{compat=1.18}
 \usepackage{amsfonts}
+\usepackage{mathrsfs}
 
 \usepackage{xcolor}
 \definecolor{ups}{RGB}{86,08,59}
