🐛 Fix typos in English S7 presentation

--- a/deliverables/s7/presentation/en/etat-de-l-art.tex
+++ b/deliverables/s7/presentation/en/etat-de-l-art.tex
@@ -18,7 +18,7 @@
     \vspace{1em}
     \underline{Example :} sign of an expression $e = (3 + 2) \times (-5)$
     \begin{align*}
-        \text{signe}(e) &= (\text{signe}(3) + \text{signe}(2)) \times \text{signe}(-5) \\
+        \text{sign}(e) &= (\text{sign}(3) + \text{sign}(2)) \times \text{sign}(-5) \\
         &= (\oplus + \oplus) \times \ominus \\
         &= \oplus \times \ominus \\
         &= \ominus
@@ -49,7 +49,7 @@
 
 \begin{frame}{Boolean functions}
 
-    Una \textbf{Boolean function}
+    A \textbf{Boolean function}
 
     $$f : \{0, 1\}^n \to \{0, 1\}$$
 
